--- a/index.html
+++ b/index.html
@@ -6,28 +6,49 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Página</title>
   <script type="text/javascript" src="js/jquery.js" defer></script>
+  <script type="text/javascript" src="js/jquery.mask.js" defer></script>
   <script type="text/javascript" src="js/main.js" defer></script>
   <link rel="stylesheet" type="text/css" href="/bootstrap/css/bootstrap.min.css">
+  
 <body>
-  <nav class="navbar navbar-light bg-dark">
-    <a class="navbar-brand text-white">Consulta CEP</a>
-        <div class="d-flex">
-          <input id="cep" class="form-control me-2" type="search" placeholder="CEP">
-          <button class="btn btn-outline-success" onclick="consultaCep()">Search</button>
+
+  <div class="modal" tabindex="-1">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Atenção</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" onclick="fecharModal()"></button>
         </div>
+        <div class="modal-body">
+          <p>CEP incompleto. Por gentileza, revise a numeração e tente novamente.</p>
+        </div>
+        <div class="modal-footer">
+          <button id="botao_modal" type="button" class="btn btn-secondary" data-bs-dismiss="modal" onclick="fecharModal()">Fechar</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <nav class="navbar navbar-light bg-dark">
+    <a class="navbar-brand text-white position-relative" style="left: 30px;">Busca CEP</a>
+      <div class="d-flex">
+          <input type="search" id="cep" class="form-control me-2" placeholder="82400-000" autofocus>
+          <button id="botao_busca" class="btn btn-outline-success btn-primary text-light" onclick="consultaCep()">Buscar</button>
+      </div>
   </nav>
 
-  <div class="container barra-progresso" style="margin-top: 40px;">
+  <div id="barra_progresso" class="container" style="margin-top: 40px;">
     <div class="progress">
       <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 100%"></div>
     </div>
   </div>
 
-  <div class="container cep" style="margin-top: 20px;">
+  <div id="cep_info" class="container" style="margin-top: 20px;">
     <div class="row">
       <h3 id="titulo_cep">CEP</h3>
     </div>
-    <div class="row" style="margin-top: 20px;">
+    <div id="cep_partials" class="row" style="margin-top: 20px;">
       <table class="table">
         <tbody>
           <tr>
@@ -50,5 +71,6 @@
       </table>
     </div>
   </div>
+  
 </body>
 </html>
